@@ -1,3 +1,10 @@
+Thu Mar 25 21:01:32 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* version.c (ruby_show_copyright): obtain copyright year from
+	  RUBY_RELEASE_YEAR.
+
+	* win32/resource.rb: ditto.
+
 Thu Mar 25 19:37:35 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* win32/resource.rb: default rubyw icon to ruby.ico, and let DLL also
